--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <!-- here i added the company title to the website so it didn't just say 'website' and put it in the body of the html instead of inside the <head>-->
     <title>Horiseon</title>
     <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1>
+            <a href="/">Hori<span class="seo">seo</span>n</a>
+        </h1>
         <div>
             <ul>
                 <li>
