--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 </head>
 
 <body>
-    <!-- the header doesnt need to be in a div class, by naming the element 'header' it makes the content more readable and easier to understand, rather than trying to visualize multiple divs with multiple classes -->
+    <!-- changed this div to 'header' because it makes the content more readable and easier to understand, rather than trying to visualize multiple divs with multiple classes -->
     <header>
         <h1>
             <a>Hori<span class="seo">seo</span>n</a>
         </h1>
-        <!-- changed this 'div' element to a 'nav' element -->
-        <nav class="float-right">
+        <div>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -27,42 +26,48 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </nav>
+        </div>
     </header>
     
+    <!-- included the image in the html so i could add the alt attribute -->
+    <!-- optimized the resolution of the hero image so it would load without lagging -->
     <div class="hero">
         <img src="assets\images\digital-marketing-meeting.jpg" alt="Horiseon staff meeting">
     </div>
-
-<!-- <div class="float-container"> -->
+<!-- added alt attributes for content images -->
+<!-- optimized all photos in the content section to make them load quicker and cut down on file sizes -->
+<!-- put content in a section rather than a div to avoid confusion with multiple nested divs -->
     <section class="content">
         <div id="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="search engine optimization" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="always working to improve our search engines" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
+            </div>
         </div>
         <div id="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="staying up to date on our online reputation"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
+            </div>
         </div>
         <div id="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="keeping our finger on the pulse of social media platforms"/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
+            </div>
         </div>
     </section>
-    
+    <!-- added alt attributes for png images -->
     <div class="benefits">
         <div>
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="bringing in customers" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -70,7 +75,7 @@
         <br />
         <div>
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="lightbulb of a good idea" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -78,7 +83,7 @@
         <br />
         <div>
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="gears and coins" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
@@ -88,7 +93,7 @@
 <!-- </div> -->
     <!-- i put the footer in its own element rather than a div for less repetitive divs and easier to visualize when reading html -->
     <footer>
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h3>Made with ❤️️ by Horiseon</h3>
         <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
     </footer>
 
